# blades

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md
.github/: FUNDING.yml
benches/: main.rs
examples/: Blades.toml  input.json  pages.json  transform_plugin.rs
examples/content/: gallery.toml  index.toml  mu.md  mu.toml
examples/content/about/: index.toml
examples/templates/: gallery.html  page.html  section.html  taxonomy.html  taxonomy_key.html
src/: config.rs  error.rs  lib.rs  main.rs  page.rs  render.rs  site.rs  sources.rs  tasks.rs  taxonomies.rs  types.rs
src/templates/: .watch.toml  Blades.toml  atom.xml  page.toml  rss.xml  sitemap.xml
