[package]
name = "blades"
version = "0.3.0-alpha"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2021"
description = "Blazing fast dead simple static site generator"
repository = "https://github.com/grego/blades"
keywords = ["website", "site", "generator"]
categories = ["command-line-utilities", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.getblades.org"

[dependencies]
ramhorns = "0.12"
arrayvec = { version = "0.7.1", features = ["serde"] }
beef = { version = "0.5", features = ["impl_serde"]}
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["clock", "serde"], default_features = false }
ahash = "0.7.4"
parking_lot = "0.11.1"
serde-cmd = "0.1.3"

# Cargo doesn't support binary-only dependencies yet.
toml = { version = "0.5.8", optional = true }
rayon = { version = "1.5.1", optional = true }
structopt = { version = "0.3.22", optional = true }
thiserror = { version = "1.0.26", optional = true }
serde_json = { version = "1", optional = true }

[features]
bin = ["toml", "rayon", "structopt", "thiserror", "serde_json"]
default = ["bin"]

[profile.release]
lto = true

[profile.bench]
lto = true
