[package]
name = "blades"
version = "0.4.0-alpha"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2021"
description = "Blazing fast dead simple static site generator"
repository = "https://github.com/grego/blades"
keywords = ["website", "site", "generator"]
categories = ["command-line-utilities", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.getblades.org"

[dependencies]
ramhorns = "0.14"
arrayvec = { version = "0.7", features = ["serde"] }
beef = { version = "0.5", features = ["impl_serde"]}
serde = { version = "^1.0.126", features = ["derive"] }
chrono = { version = "^0.4.19", features = ["std", "serde"], default_features = false }
fnv = "1.0"
hashbrown = { version = "0.12", features = ["inline-more", "serde"], default_features = false }
serde-cmd = "0.1.3"
pulldown-cmark = { version = "0.9", default_features = false }
cmark-syntax = "0.3"

# Cargo doesn't support binary-only dependencies yet.
toml = { version = "0.5.9", optional = true }
clap = { version = "3.1", optional = true, default_features = false, features = ["std"] }
clap_derive = { version = "3.1", optional = true }
thiserror = { version = "1.0.31", optional = true }
serde_json = { version = "1", optional = true }

[features]
bin = ["toml", "clap", "clap_derive", "thiserror", "serde_json"]
mathml = ["cmark-syntax/latex2mathml"]
default = ["bin", "mathml"]

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
codegen-units = 1

[profile.bench]
lto = true
