[package]
name = "blades"
version = "1.0.0"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2021"
description = "Blazing fast dead simple static site generator"
repository = "https://github.com/grego/blades"
keywords = ["website", "site", "generator"]
categories = ["command-line-utilities", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://getblades.org"

[dependencies]
ramhorns = "1"
arrayvec = { version = "0.7", features = ["serde"] }
beef = { version = "0.5", features = ["impl_serde"]}
serde = { version = "^1.0.126", features = ["derive"] }
chrono = { version = "^0.4.19", features = ["std", "serde"], default_features = false }
fnv = "1.0"
hashbrown = { version = "0.14", features = ["inline-more", "serde"], default_features = false }
pulldown-cmark = { version = "0.11", default_features = false, features = ["html"] }
cmark-syntax = "^0.5.1"

# Cargo doesn't support binary-only dependencies yet.
toml = { version = "0.5.9", optional = true }
thiserror = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde-cmd = { version = "0.1.3", optional = true }

[features]
bin = ["toml", "thiserror", "serde_json", "serde-cmd"]
mathml = ["cmark-syntax/latex2mathml"]
default = ["bin", "mathml"]

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
panic = "abort"
codegen-units = 1

[profile.bench]
lto = true

[patch.crates-io]
ramhorns = { git = "https://github.com/grego/ramhorns", branch = "cmark11" }
